--- a/index.html
+++ b/index.html
@@ -475,6 +475,6 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Lógica de la app -->
-  <script src="app.js?v=3"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
