--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
                 <span class="kpi-value">—</span>
                 <span class="kpi-hint">Último registro creado.</span>
               </article>
+
+              <article id="kpiHojalateria" class="kpi-card">
+                <span class="kpi-label">Trabajos de hojalatería</span>
+                <span class="kpi-value">0</span>
+                <span class="kpi-hint">Órdenes activas de carrocería.</span>
+              </article>
+
+              <article id="kpiPintura" class="kpi-card">
+                <span class="kpi-label">Trabajos de pintura</span>
+                <span class="kpi-value">0</span>
+                <span class="kpi-hint">Órdenes activas de pintura.</span>
+               </article>
             </div>
           </section>
 
